# yunxi-project

./: .bandit  .coveragerc  .dockerignore  .git_commit_msg_step8.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  .radon  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.base  README.md  TEST_REPORT.md  VERSION  conftest.py  deploy-prod.ps1  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  rollback.ps1  start-all.ps1  stop-all.ps1  upgrade.ps1  yunxi_deploy.py
API-Gateway/: Dockerfile  README.md  requirements.txt  server.py
M0-principal-console/: Dockerfile  README.md  __main__.py  config.example.yaml  requirements.txt  server.py
M1-agent-cluster/: .env.example  CODEX_DEPLOYMENT.md  README.md  a2a_protocol.py  adaptive_router.py  agent_card.py  agent_emotion.py  agent_note.py  api_server.py  budget_manager.py  config.example.yaml  config.yaml  config_manager.py  dead_letter_queue.py  ensemble_engine.py  error_codes.py  event_store.py  explore_agent_config.yaml  feedback_loop.py  group_chat.py  guardrails.py  guardrails_v2.py  intent_classifier_v2.py  lifecycle_manager.py  master_scheduler.py  memory_system.py  message_adapter.py  message_bus.py  modules_register.py  orchestrator_v2.py  orchestrator_v3.py  orchestrator_v4.py  orchestrator_v5.py  orchestrator_v8.py  persistence.py  reflection_engine.py  semantic_intent_v3.py  streaming_engine.py  swarm_and_innovation.py  task_dispatcher.py  (+4 more)
M1-agent-hub/: .gitignore  CODEX_DEPLOYMENT.md  Dockerfile  EXPLORE_DEPLOYMENT.md  HERMES_DEPLOYMENT.md  README.md  __init__.py  agent_dev.py  agent_registry.py  agent_review.py  app_bootstrap.py  bulkhead.py  checkpointer.py  circuit_breaker.py  codex_agent_config.yaml  codex_register.py  config_manager.py  conftest.py  dead_letter_queue.py  degradation.py  enhanced_registry.py  error_codes.py  exceptions.py  explore_register.py  guardrails.py  guardrails_v2.py  health_monitor.py  hermes_agent_config.yaml  hermes_register.py  http_transport.py  idempotency.py  intent_classifier.py  interfaces.py  ledger_engine.py  lifecycle_demo.py  lifecycle_manager.py  llm_provider.py  logging_setup.py  mcp_server.py  memory_bridge.py  (+20 more)
M10-system-guard/: .env.example  Dockerfile  README.md  requirements-dev.txt  requirements.txt  server.py
M11-mcp-bus/: .env.example  Dockerfile  README.md  __main__.py  requirements.txt  server.py
M12-security-shield/: .env.example  Dockerfile  README.md  __init__.py  requirements.txt  server.py
M2-skills-cluster/: .env.example  Dockerfile  OPTIMIZATION_ANCHOR_v3.11.0.txt  README.md  config.example.yaml  pytest.ini  requirements.txt  resource.py  start_server.py
M3-edge-cloud/: .env.example  Dockerfile  OPTIMIZATION_ANCHOR_v2.2.0.txt  README.md  pytest.ini  requirements.txt  server.py  unified_errors.py  verify_p1_fixes.py  模块三端云协同调度内核.md
M4-scene-engine/: .env.example  Dockerfile  README.md  __main__.py  config.example.yaml  pytest.ini  requirements.txt  server.py
M5-tide-memory/: .env.example  CHANGELOG.md  Dockerfile  README.md  integration-checklist.md  pyproject.toml  requirements.txt  server.py  server.py.bak2  test_p1_2_3.py  verify_fixes.py  version.txt
M5-tide-memory/data/memory/: l1_shallow.db  l1_shallow.db-shm  l1_shallow.db-wal  l2_deep.db  l2_deep.db-shm  l2_deep.db-wal
M5-tide-memory/data/memory/l3_abyss/: index.db  master.key.enc
M5-tide-memory/docs/: API.md  README.md  三级域权限设计.md  四级密级标记规范.md  潮汐记忆-联调就绪自检报告.md
M5-tide-memory/scripts/: init_db.py  migrate.py
M5-tide-memory/src/: main.py
M5-tide-memory/src/data/memory/l3_abyss/: master.key.enc
M5-tide-memory/src/tide_memory/: __init__.py  errors.py
M5-tide-memory/src/tide_memory/api/: __init__.py  m8_interface.py  m8_routes.py  routes.py
M5-tide-memory/src/tide_memory/audit/: __init__.py  audit_logger.py
M5-tide-memory/src/tide_memory/common/: __init__.py  constants.py  idempotency.py  retry.py  text_utils.py  transaction.py
M5-tide-memory/src/tide_memory/core/: __init__.py  config.py  models.py  skill_interface.py  tide_phase.py  version.py
M5-tide-memory/src/tide_memory/db/: __init__.py  connection.py  migration.py
M5-tide-memory/src/tide_memory/emotion/: __init__.py  ei_model.py  valence_arousal.py
M5-tide-memory/src/tide_memory/growth/: achievements.py  calendar.py  chronicle.py  database.py  echo.py  models.py  router.py  season.py  talents.py
M5-tide-memory/src/tide_memory/layers/: __init__.py  base.py  cache_coordinator.py  l0_beach.py  l1_shallow.py  l2_deep.py  l3_abyss.py  transactional_layer.py
M5-tide-memory/src/tide_memory/middleware/: __init__.py  auth.py  circuit_breaker.py  exception_handler.py  rate_limit.py
M5-tide-memory/src/tide_memory/recall/: keyword_search.py  recall_engine.py  vector_search.py
M5-tide-memory/src/tide_memory/security/: __init__.py  desensitizer.py  domain_manager.py  secret_marker.py
M5-tide-memory/src/tide_memory/sharing/: __init__.py  exporter.py  importer.py  models.py  router.py  share_pool.py
M5-tide-memory/src/tide_memory/sleep/: __init__.py  consolidation.py  scheduler.py
M5-tide-memory/src/tide_memory/utils/: __init__.py  crypto.py  hash_utils.py
M5-tide-memory/tests/: test_db_migration.py  test_full.py  test_growth.py  test_middleware.py  test_skill_interface.py  test_smoke.py  test_tide_phase.py  test_vector_search_gpu.py
M5-tide-memory/开发日志/: 开发日志.md
M6-hardware-peripheral/: .env.example  Dockerfile  README.md  pytest.ini  requirements.txt  server.py  server.py.bak2  verify_m6.py
M7-workflow-builder/: .env.example  Dockerfile  README.md  __main__.py  requirements.txt  server.py
M8-control-tower/: Dockerfile  README.md  __main__.py  requirements.txt  server.py
M9-programming-dev/: .env.example  Dockerfile  README.md  requirements.txt  server.py
archive/: README.md
artifacts/: README.md  index.json
changelogs/: README.md  YX-CHG-0001-M6-修复SSE导入路径错误-20260712.md  YX-CHG-0002-M3-修复4个P0功能性Bug-20260712.md  YX-CHG-0003-M9-修复uptime硬编码-20260712.md  YX-CHG-0004-M6-版本号统一为v1.0.0-20260712.md  YX-CHG-0005-M9开发者工坊-API版本前缀统一-20260712.md  (+15 more)
config/: .env.example  (+5 more)
(+2661 files in other folders)
