# ============================================================
# 云汐项目 - Monorepo 根配置（PDM Workspace PoC
# ============================================================
# 状态：实验性质（PoC / AR-012）
# 说明：本文件同时承载 PDM workspace 根配置 + 全局工具配置
#       PoC 阶段不移动代码，仅验证包管理方案可行性
# ============================================================

[build-system]
requires = ["pdm-backend>=2.0.0"]
build-backend = "pdm.backend"

[project]
name = "yunxi-monorepo"
version = "0.5.0"
description = "云汐项目 - Monorepo 根项目"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Yunxi Team", email = "team@yunxi.example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# 根项目不发布到 PyPI
dynamic = ["dependencies"]

# ============================================================
# PDM Workspace 配置
# 文档: https://pdm.fming.dev/latest/usage/workspace/
# ============================================================

[tool.pdm.workspace]
# workspace 成员包的搜索路径（glob 模式）
# 存在此表即表示启用 workspace 模式
member_paths = [
    "packages/*",
]

# ============================================================
# 依赖组（Dependency Groups - PEP 735 标准）
# 根项目定义全局共享依赖，各子包可继承或覆盖
# ============================================================

[dependency-groups]
# ---- 开发依赖：所有模块共享的开发工具
dev = [
    # Lint & 格式化
    "ruff>=0.6.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "codespell>=2.3.0,<3.0.0",
    # 测试框架
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",
    "pytest-timeout>=2.3.0,<3.0.0",
    "pytest-rerunfailures>=14.0,<15.0",
    "pytest-html>=4.0.0,<5.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    # 代码质量 & 安全
    "bandit>=1.7.0,<2.0.0",
    "radon>=6.0.0,<7.0.0",
    # HTTP 测试
    "httpx>=0.27.0,<1.0.0",
]

# ---- 文档构建
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# ---- 安全审计
audit = [
    "pip-audit>=2.6.0",
    "safety>=2.3.0",
]

# ============================================================
# PDM 脚本（类似 package.json scripts）
# ============================================================

[tool.pdm.scripts]
# 代码检查
lint = { cmd = "ruff check .", env = {RUFF_CACHE_DIR = ".ruff_cache"} }
# 代码格式化
format = { cmd = "ruff format .", env = {RUFF_CACHE_DIR = ".ruff_cache"} }
# 类型检查
typecheck = "mypy ."
# 运行测试
test = "pytest"
# 运行所有检查
check = { composite = ["lint", "typecheck", "test"] }
# 启动所有模块
start.all = "python scripts/start_all.py"
# 查看 workspace 成员
ws.list = "pdm list --workspace"
# 统一更新依赖锁
ws.lock = "pdm lock --group=dev --group=docs"

# ============================================================
# 版本管理配置
# 单一真源：根 pyproject.toml 中的 version 字段
# 各子包版本通过 workspace 动态继承
# ============================================================

[tool.pdm.version]
# 使用根版本号来源：根 pyproject.toml 的 version 字段
source = "file"
path = "pyproject.toml"

# ============================================================
# PDM Python 解释器配置
# ============================================================

[tool.pdm.python]
# 优先使用的 Python 版本（与 .pdm-python 文件配合）
use_pyenv = false

# ============================================================
# ruff - Python linter & formatter
# 替代 flake8 + isort + pyupgrade + bandit + 部分 pylint 功能
# 官方文档: https://docs.astral.sh/ruff/
# ============================================================

[tool.ruff]
target-version = "py310"
line-length = 120

# 排除目录（lint 和 format 均生效）
exclude = [
    "__pycache__",
    ".git",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
    "data",
    "logs",
    "node_modules",
    "frontend",
    "_archive",
    "archive",
    "M5-tide-memory",
    "M1-agent-cluster",
    "backups",
    "inspection-reports",
    "models",
    "assets",
    "artifacts",
    ".ruff_cache",
    ".mypy_cache",
    ".pytest_cache",
]

# --- 格式化配置 ---
[tool.ruff.format]
# 与 black 兼容的引号风格
quote-style = "double"
# 多行字符串缩进
indent-style = "space"
# 多行结尾逗号（当内容超出行宽时自动添加）
trailing-comma = "all"
# 自动格式化的行长度（与 lint 保持一致）

# --- Lint 规则集 ---
[tool.ruff.lint]
# 启用的规则集：
#   E / W  - pycodestyle 风格检查（缩进、空行、命名等）
#   F      - pyflakes 错误检测（未使用变量、未定义名称等）
#   I      - isort 导入排序
#   N      - pep8-naming 命名规范
#   D      - pydocstyle 文档字符串
#   UP     - pyupgrade 语法升级建议
#   B      - flake8-bugbear 常见 bug 模式
#   SIM    - flake8-simplify 简化建议
#   T20    - flake8-print 禁止遗留 print 语句
#   S      - flake8-bandit 安全检查
#   PTH    - flake8-use-pathlib 建议使用 pathlib
#   RUF    - ruff 特有规则
#   C90    - mccabe 圈复杂度检测
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "S",   # flake8-bandit 安全检查
    "PTH", # flake8-use-pathlib
    "RUF", # ruff 特有规则
    "C90", # mccabe 圈复杂度
]

# 忽略的规则（避免过于严格导致难以落地，渐进式推进）
ignore = [
    "D100", # 缺少模块级 docstring（模块文件不必强制写文档）
    "D104", # 缺少 __init__.py docstring
    "D107", # 缺少 __init__ 方法 docstring
    "D203", # 类 docstring 前空行（与 D211 冲突，保留 D211）
    "D212", # 多行 docstring 摘要起始位置（与 D213 冲突，保留 D213）
    "D401", # docstring 首行必须是祈使语气（中文项目不适用）
    "SIM108", # 建议使用三元表达式（可读性优先，不强求）
    "UP035", # 建议使用 typing 导入别名（兼容老代码，暂不强制）
    "B008", # 函数参数默认值为可变对象（已知风险场景除外，暂不强制）
    # 安全规则豁免（已知误报或测试/脚本场景）
    "S101", # 测试中使用 assert（在 per-file-ignores 中更细粒度控制）
    "S311", # random 模块用于非加密场景（测试数据生成等）
    "S603", # subprocess 调用（项目中确实需要，已做参数校验）
    "S607", # 启动部分路径（已知风险，已做白名单控制）
    # pathlib 迁移豁免（存量代码较多，逐步迁移）
    "PTH100", "PTH101", "PTH102", "PTH103", "PTH110", "PTH111", "PTH112", "PTH113", "PTH114", "PTH115", "PTH116", "PTH117", "PTH118", "PTH119", "PTH120", "PTH121", "PTH122", "PTH123",
    # ruff 特有规则豁免
    "RUF001", # 字符中包含模糊 Unicode 字符（中文项目常见）
    "RUF003", # 未使用的变量（与 F841 重复，以 F841 为准）
]

# --- 圈复杂度阈值 ---
[tool.ruff.lint.mccabe]
max-complexity = 15

# --- 导入排序（isort 兼容） ---
[tool.ruff.lint.isort]
known-first-party = ["yunxi", "shared"]
# 导入分组顺序：标准库 → 第三方 → 本地项目 → 相对导入
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
# 分组之间保留一行空行
lines-between-types = 1
# 强制相对导入层级（from . import 而非 from pkg import）
force-single-line = false
# 多行导入使用括号
multi-line-output = "vertical-hanging-indent"

# --- pydocstyle 配置 ---
[tool.ruff.lint.pydocstyle]
# 使用 Google 风格 docstring（比 numpy 风格更简洁）
convention = "google"

# --- 规则级别调整（按文件粒度） ---
[tool.ruff.lint.per-file-ignores]
# 测试文件允许更宽松的规则
"tests/**/*.py" = [
    "D100", "D101", "D102", "D103", # 测试文件不强制 docstring
    "S101",                          # 允许 assert
    "S106", "S105", "S108",          # 测试中允许硬编码密码/密钥
    "S311",                          # 测试数据生成允许使用 random
    "T201",                          # 测试中允许 print（调试用）
    "B018",                          # 测试中允许有用的表达式
]
# shared/tests 测试文件
"shared/tests/**/*.py" = [
    "D100", "D101", "D102", "D103",
    "S101", "S106", "S105", "S108", "S311",
    "T201",
]
# 脚本 / 入口文件允许更宽松的规则
"scripts/**/*.py" = [
    "D100", "D101", # 脚本不必强制 docstring
    "T201",         # 脚本允许 print
    "S603", "S607", # 脚本中允许系统调用
]
# 配置文件
"__init__.py" = [
    "D104", # __init__.py 不必强制 docstring
    "F401", # 允许在 __init__.py 中导入但未使用（用于 re-export）
]

# ============================================================
# mypy - 类型检查（渐进式严格模式）
# 官方文档: https://mypy.readthedocs.io/
# 策略：从核心模块开始，逐步提升严格度
# ============================================================

[tool.mypy]
# 目标 Python 版本
python_version = "3.10"

# ---- 全局模式：宽松（对未标注类型的代码不报错） ----
# 不强制检查未标注类型的函数/调用
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

# 警告级别
warn_unused_ignores = true
warn_return_any = false
warn_unreachable = true

# 类型推断相关
strict_optional = true
no_implicit_optional = false

# 第三方库处理
ignore_missing_imports = true
follow_imports = "normal"

# 动态属性（允许运行时动态定义的属性）
allow_untyped_globals = true
allow_redefinition = false

# 错误输出
show_error_codes = true
show_column_numbers = true
pretty = true

# 增量检查缓存
incremental = true
cache_dir = ".mypy_cache"

# ============================================================
# 模块级严格度配置（渐进式策略）
# 从核心模块（shared/core、shared/data）开始逐步提升
# ============================================================

# ---- 核心模块：中等严格度（要求类型标注） ----
[[tool.mypy.overrides]]
module = [
    "shared.core.*",
    "shared.core",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
# 核心模块要求严格类型，但仍允许未标注的外部调用
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "shared.data.*",
    "shared.data",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_calls = false

# ---- 业务模块：宽松模式（仅检查已有类型标注的代码） ----
[[tool.mypy.overrides]]
module = [
    "shared.business.*",
    "shared.business",
]
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true

# ---- 测试代码：最宽松（不检查类型） ----
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "tests",
    "shared.tests.*",
    "shared.tests",
]
ignore_errors = true
disallow_untyped_defs = false

# ---- 各模块后端代码：宽松模式 ----
[[tool.mypy.overrides]]
module = [
    "M8-control-tower.*",
    "M9-dev-workshop.*",
    "M11-mcp-bus.*",
    "M12-security-shield.*",
]
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
