[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yunxi-m5-tide-memory"
version = "0.5.2"
description = "云汐系统 M5 潮汐分层记忆系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["memory", "tidal", "vector-search", "fastapi", "yunxi"]

dependencies = [
    # Web 框架
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    # 数据库
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # 向量数据库
    "chromadb>=0.4.0",
    # 加密
    "cryptography>=41.0.0",
    # 认证
    "PyJWT>=2.8.0",
    # 配置管理
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
    # 工具
    "httpx>=0.24.0",
    "numpy",
    "scikit-learn",
    "psutil",
    # CPU 向量检索
    "faiss-cpu",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.7.4",
]
full = [
    "sentence-transformers",
    "faiss-gpu>=1.7.4",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
